# Polymarket-Trader

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md  rust-toolchain.toml
apps/polymarket-node/: Cargo.toml
apps/polymarket-node/src/: main.rs
apps/polymarket-ops-api/: Cargo.toml
apps/polymarket-ops-api/src/: main.rs
crates/polymarket-api-types/: Cargo.toml
crates/polymarket-api-types/src/: lib.rs
crates/polymarket-audit/: Cargo.toml
crates/polymarket-audit/src/: lib.rs
crates/polymarket-common/: Cargo.toml
crates/polymarket-common/src/: lib.rs
crates/polymarket-config/: Cargo.toml
crates/polymarket-config/src/: lib.rs
crates/polymarket-core/: Cargo.toml
crates/polymarket-core/src/: lib.rs
crates/polymarket-msgbus/: Cargo.toml
crates/polymarket-msgbus/src/: lib.rs
crates/polymarket-opportunity/: Cargo.toml
crates/polymarket-opportunity/src/: dependency_scanner.rs  errors.rs  fee_mm_scanner.rs  lib.rs  models.rs  neg_risk_scanner.rs  rebalancing_scanner.rs  scorer.rs  stale_guard.rs
crates/polymarket-rules/: Cargo.toml
crates/polymarket-rules/src/: clarifications.rs  classifier.rs  equivalence.rs  errors.rs  graph_builder.rs  graph_store.rs  lib.rs  models.rs  neg_risk.rs  normalizer.rs  parser.rs  replay.rs
crates/polymarket-services/: Cargo.toml
crates/polymarket-services/src/: execution.rs  lib.rs  notifications.rs  portfolio.rs  risk.rs  settlement.rs  sim.rs
crates/polymarket-storage/: Cargo.toml
crates/polymarket-storage/src/: lib.rs
