[package]
name = "polymarket-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
polymarket-core = { path = "../polymarket-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
