[package]
name = "polymarket-msgbus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
polymarket-core = { path = "../polymarket-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
