[package]
name = "polymarket-opportunity"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
polymarket-core = { path = "../polymarket-core" }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
