[package]
name = "polymarket-services"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
futures-util.workspace = true
hmac.workspace = true
polymarket-audit = { path = "../polymarket-audit" }
polymarket-common = { path = "../polymarket-common" }
polymarket-config = { path = "../polymarket-config" }
polymarket-core = { path = "../polymarket-core" }
polymarket-msgbus = { path = "../polymarket-msgbus" }
polymarket-opportunity = { path = "../polymarket-opportunity" }
polymarket-rules = { path = "../polymarket-rules" }
polymarket-storage = { path = "../polymarket-storage" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
