[package]
name = "polymarket-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
polymarket-core = { path = "../polymarket-core" }
rusqlite.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
